--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -154,14 +154,26 @@
        "</div>"
       ],
       "text/plain": [
-       "   RowNumber  CustomerId   Surname  ...  IsActiveMember EstimatedSalary Exited\n",
-       "0          1    15634602  Hargrave  ...               1       101348.88      1\n",
-       "1          2    15647311      Hill  ...               1       112542.58      0\n",
-       "2          3    15619304      Onio  ...               0       113931.57      1\n",
-       "3          4    15701354      Boni  ...               0        93826.63      0\n",
-       "4          5    15737888  Mitchell  ...               1        79084.10      0\n",
+       "   RowNumber  CustomerId   Surname  CreditScore Geography  Gender  Age  \\\n",
+       "0          1    15634602  Hargrave          619    France  Female   42   \n",
+       "1          2    15647311      Hill          608     Spain  Female   41   \n",
+       "2          3    15619304      Onio          502    France  Female   42   \n",
+       "3          4    15701354      Boni          699    France  Female   39   \n",
+       "4          5    15737888  Mitchell          850     Spain  Female   43   \n",
        "\n",
-       "[5 rows x 14 columns]"
+       "   Tenure    Balance  NumOfProducts  HasCrCard  IsActiveMember  \\\n",
+       "0       2       0.00              1          1               1   \n",
+       "1       1   83807.86              1          0               1   \n",
+       "2       8  159660.80              3          1               0   \n",
+       "3       1       0.00              2          0               0   \n",
+       "4       2  125510.82              1          1               1   \n",
+       "\n",
+       "   EstimatedSalary  Exited  \n",
+       "0        101348.88       1  \n",
+       "1        112542.58       0  \n",
+       "2        113931.57       1  \n",
+       "3         93826.63       0  \n",
+       "4         79084.10       0  "
       ]
      },
      "execution_count": 4,
@@ -380,18 +392,31 @@
        "</div>"
       ],
       "text/plain": [
-       "      CreditScore Geography  Gender  ...  IsActiveMember  EstimatedSalary  Exited\n",
-       "0             619    France  Female  ...               1        101348.88       1\n",
-       "1             608     Spain  Female  ...               1        112542.58       0\n",
-       "2             502    France  Female  ...               0        113931.57       1\n",
-       "3             699    France  Female  ...               0         93826.63       0\n",
-       "4             850     Spain  Female  ...               1         79084.10       0\n",
-       "...           ...       ...     ...  ...             ...              ...     ...\n",
-       "9995          771    France    Male  ...               0         96270.64       0\n",
-       "9996          516    France    Male  ...               1        101699.77       0\n",
-       "9997          709    France  Female  ...               1         42085.58       1\n",
-       "9998          772   Germany    Male  ...               0         92888.52       1\n",
-       "9999          792    France  Female  ...               0         38190.78       0\n",
+       "      CreditScore Geography  Gender  Age  Tenure    Balance  NumOfProducts  \\\n",
+       "0             619    France  Female   42       2       0.00              1   \n",
+       "1             608     Spain  Female   41       1   83807.86              1   \n",
+       "2             502    France  Female   42       8  159660.80              3   \n",
+       "3             699    France  Female   39       1       0.00              2   \n",
+       "4             850     Spain  Female   43       2  125510.82              1   \n",
+       "...           ...       ...     ...  ...     ...        ...            ...   \n",
+       "9995          771    France    Male   39       5       0.00              2   \n",
+       "9996          516    France    Male   35      10   57369.61              1   \n",
+       "9997          709    France  Female   36       7       0.00              1   \n",
+       "9998          772   Germany    Male   42       3   75075.31              2   \n",
+       "9999          792    France  Female   28       4  130142.79              1   \n",
+       "\n",
+       "      HasCrCard  IsActiveMember  EstimatedSalary  Exited  \n",
+       "0             1               1        101348.88       1  \n",
+       "1             0               1        112542.58       0  \n",
+       "2             1               0        113931.57       1  \n",
+       "3             0               0         93826.63       0  \n",
+       "4             1               1         79084.10       0  \n",
+       "...         ...             ...              ...     ...  \n",
+       "9995          1               0         96270.64       0  \n",
+       "9996          1               1        101699.77       0  \n",
+       "9997          0               1         42085.58       1  \n",
+       "9998          1               0         92888.52       1  \n",
+       "9999          1               0         38190.78       0  \n",
        "\n",
        "[10000 rows x 11 columns]"
       ]
@@ -607,18 +632,31 @@
        "</div>"
       ],
       "text/plain": [
-       "      CreditScore Geography  Gender  ...  IsActiveMember  EstimatedSalary  Exited\n",
-       "0             619    France       0  ...               1        101348.88       1\n",
-       "1             608     Spain       0  ...               1        112542.58       0\n",
-       "2             502    France       0  ...               0        113931.57       1\n",
-       "3             699    France       0  ...               0         93826.63       0\n",
-       "4             850     Spain       0  ...               1         79084.10       0\n",
-       "...           ...       ...     ...  ...             ...              ...     ...\n",
-       "9995          771    France       1  ...               0         96270.64       0\n",
-       "9996          516    France       1  ...               1        101699.77       0\n",
-       "9997          709    France       0  ...               1         42085.58       1\n",
-       "9998          772   Germany       1  ...               0         92888.52       1\n",
-       "9999          792    France       0  ...               0         38190.78       0\n",
+       "      CreditScore Geography  Gender  Age  Tenure    Balance  NumOfProducts  \\\n",
+       "0             619    France       0   42       2       0.00              1   \n",
+       "1             608     Spain       0   41       1   83807.86              1   \n",
+       "2             502    France       0   42       8  159660.80              3   \n",
+       "3             699    France       0   39       1       0.00              2   \n",
+       "4             850     Spain       0   43       2  125510.82              1   \n",
+       "...           ...       ...     ...  ...     ...        ...            ...   \n",
+       "9995          771    France       1   39       5       0.00              2   \n",
+       "9996          516    France       1   35      10   57369.61              1   \n",
+       "9997          709    France       0   36       7       0.00              1   \n",
+       "9998          772   Germany       1   42       3   75075.31              2   \n",
+       "9999          792    France       0   28       4  130142.79              1   \n",
+       "\n",
+       "      HasCrCard  IsActiveMember  EstimatedSalary  Exited  \n",
+       "0             1               1        101348.88       1  \n",
+       "1             0               1        112542.58       0  \n",
+       "2             1               0        113931.57       1  \n",
+       "3             0               0         93826.63       0  \n",
+       "4             1               1         79084.10       0  \n",
+       "...         ...             ...              ...     ...  \n",
+       "9995          1               0         96270.64       0  \n",
+       "9996          1               1        101699.77       0  \n",
+       "9997          0               1         42085.58       1  \n",
+       "9998          1               0         92888.52       1  \n",
+       "9999          1               0         38190.78       0  \n",
        "\n",
        "[10000 rows x 11 columns]"
       ]
@@ -678,6 +716,135 @@
    ],
    "source": [
     "onehot_encoder_geo.get_feature_names_out(['Geography'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Geography_France</th>\n",
+       "      <th>Geography_Germany</th>\n",
+       "      <th>Geography_Spain</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9995</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9996</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9997</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9998</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9999</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10000 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Geography_France  Geography_Germany  Geography_Spain\n",
+       "0                  1.0                0.0              0.0\n",
+       "1                  0.0                0.0              1.0\n",
+       "2                  1.0                0.0              0.0\n",
+       "3                  1.0                0.0              0.0\n",
+       "4                  0.0                0.0              1.0\n",
+       "...                ...                ...              ...\n",
+       "9995               1.0                0.0              0.0\n",
+       "9996               1.0                0.0              0.0\n",
+       "9997               1.0                0.0              0.0\n",
+       "9998               0.0                1.0              0.0\n",
+       "9999               1.0                0.0              0.0\n",
+       "\n",
+       "[10000 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(geo_encoder.toarray(),columns=onehot_encoder_geo.get_feature_names_out(['Geography']))"
    ]
   }
  ],
