combining encoded columns with original data

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -846,6 +846,17 @@
    "source": [
     "pd.DataFrame(geo_encoder.toarray(),columns=onehot_encoder_geo.get_feature_names_out(['Geography']))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# combine one hot encoded columns with original data\n",
+    "data = data.drop(['Geography'],axis=1)\n",
+    "data = pd.concat([data,pd.DataFrame(geo_encoder.toarray(),columns=onehot_encoder_geo.get_feature_names_out(['Geography']))],axis=1)"
+   ]
   }
  ],
  "metadata": {
