--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
        "[10000 rows x 3 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,13 +849,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# combine one hot encoded columns with original data\n",
     "data = data.drop(['Geography'],axis=1)\n",
     "data = pd.concat([data,pd.DataFrame(geo_encoder.toarray(),columns=onehot_encoder_geo.get_feature_names_out(['Geography']))],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save the encoder and scaler\n",
+    "with open('label_encoder_geo.pkl', 'wb') as file:\n",
+    "    pickle.dump(label_encoder_gender, file)\n",
+    "with open('onehot_encoder_geo.pkl','wb')   as f:\n",
+    "    pickle.dump(onehot_encoder_geo,f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# divide the dataset into independent and dependent features\n",
+    "X = data.drop(['Exited'],axis=1)\n",
+    "y = data['Exited']\n",
+    "# split the dataset into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2,random_state=42)\n",
+    "# scale the features\n",
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('scaler.pkl', 'wb') as file:\n",
+    "    pickle.dump(scaler, file)"
    ]
   }
  ],
