started ann implementation

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -897,6 +897,20 @@
     "with open('scaler.pkl', 'wb') as file:\n",
     "    pickle.dump(scaler, file)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ANN IMPLEMENTATION\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
