--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -11,20 +11,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import tensorflow\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load the trained model ,scaler pickle, one hot\n",
+    "model = tensorflow.keras.models.load_model('model.h5')\n",
+    "with open('scaler.pkl', 'rb') as file:\n",
+    "    scaler = pickle.load(file)\n",
+    "with open('onehot_encoder_geo.pkl', 'rb') as file:\n",
+    "    label_encoder_gender = pickle.load(file)\n",
+    "with open('label_encoder_geo.pkl', 'rb') as file:\n",
+    "    label_encoder_geo = pickle.load(file)\n"
+   ]
   },
   {
    "cell_type": "code",
